compiler/testData/checkerWithErrorTypes/quick/regressions/kt439.jet
// KT-439 Support labeled function literals in call arguments

inline fun run1<T>(body : fun() : T) : T = body()

fun main1(<!UNUSED_PARAMETER!>args<!> : Array<String>) {
    run1 @l{ 1 } // should not be an error
}